--- a/package.json
+++ b/package.json
@@ -2,60 +2,58 @@
   "name": "cart-application",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "node server.js",
+    "start": "ng serve",
+    "server:start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod",
     "heroku-postbuild": "ng build --prod"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
-    "@angular/cli": "~8.3.21",
-    "@angular/common": "~8.2.14",
-    "@angular/compiler": "~8.2.14",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/core": "~8.2.14",
-    "@angular/forms": "~8.2.14",
-    "@angular/platform-browser": "~8.2.14",
-    "@angular/platform-browser-dynamic": "~8.2.14",
-    "@angular/router": "~8.2.14",
-    "@fortawesome/fontawesome-free": "^5.12.0",
-    "bootstrap": "^4.4.1",
-    "express": "^4.17.1",
-    "jquery": "^3.4.1",
-    "ng5-slider": "^1.2.4",
+    "@angular/animations": "~21.0.1",
+    "@angular/cli": "~21.0.1",
+    "@angular/common": "~21.0.1",
+    "@angular/compiler": "~21.0.1",
+    "@angular/compiler-cli": "~21.0.1",
+    "@angular/core": "~21.0.1",
+    "@angular/forms": "~21.0.1",
+    "@angular/platform-browser": "~21.0.1",
+    "@angular/platform-browser-dynamic": "~21.0.1",
+    "@angular/router": "~21.0.1",
+    "@fortawesome/fontawesome-free": "^7.1.0",
+    "bootstrap": "^5.3.8",
+    "express": "^5.1.0",
+    "jquery": "^3.7.1",
     "path": "^0.12.7",
-    "popper.js": "^1.16.0",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "typescript": "~3.5.3",
-    "zone.js": "~0.9.1"
+    "popper.js": "^1.16.1",
+    "rxjs": "~7.8.2",
+    "tslib": "^2.8.1",
+    "typescript": "~5.9.3",
+    "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.803.21",
-    "@angular/cli": "~8.3.21",
-    "@angular/compiler-cli": "~8.2.14",
-    "@angular/language-service": "~8.2.14",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "enhanced-resolve": "^3.3.0",
-    "jasmine-core": "~3.4.0",
-    "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "@angular-devkit/build-angular": "~21.0.1",
+    "@angular/cli": "~21.0.1",
+    "@angular/compiler-cli": "~21.0.1",
+    "@angular/language-service": "~21.0.1",
+    "@types/jasmine": "~5.1.13",
+    "@types/jasminewd2": "~2.0.13",
+    "@types/node": "~24.10.1",
+    "codelyzer": "^6.0.2",
+    "enhanced-resolve": "^5.18.3",
+    "jasmine-core": "~5.12.1",
+    "jasmine-spec-reporter": "~7.0.0",
+    "karma": "~6.4.4",
+    "karma-chrome-launcher": "~3.2.0",
+    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~10.9.2",
+    "tslint": "~6.1.3",
+    "typescript": "~5.9.3"
   },
   "engines": {
     "node": "13.5.0",
