--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~21.0.1",
-    "@angular/cli": "~21.0.1",
-    "@angular/common": "~21.0.1",
-    "@angular/compiler": "~21.0.1",
-    "@angular/compiler-cli": "~21.0.1",
-    "@angular/core": "~21.0.1",
-    "@angular/forms": "~21.0.1",
-    "@angular/platform-browser": "~21.0.1",
-    "@angular/platform-browser-dynamic": "~21.0.1",
-    "@angular/router": "~21.0.1",
+    "@angular-slider/ngx-slider": "^20.0.0",
+    "@angular/animations": "^19.2.16",
+    "@angular/common": "^19.2.16",
+    "@angular/compiler": "^19.2.16",
+    "@angular/core": "^19.2.16",
+    "@angular/forms": "^19.2.16",
+    "@angular/platform-browser": "^19.2.16",
+    "@angular/platform-browser-dynamic": "^19.2.16",
+    "@angular/router": "^19.2.16",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
@@ -30,14 +29,13 @@
     "popper.js": "^1.16.1",
     "rxjs": "~7.8.2",
     "tslib": "^2.8.1",
-    "typescript": "~5.9.3",
     "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~21.0.1",
-    "@angular/cli": "~21.0.1",
-    "@angular/compiler-cli": "~21.0.1",
-    "@angular/language-service": "~21.0.1",
+    "@angular-devkit/build-angular": "^19.2.19",
+    "@angular/cli": "^19.2.19",
+    "@angular/compiler-cli": "^19.2.16",
+    "@angular/language-service": "^19.2.16",
     "@types/jasmine": "~5.1.13",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "~24.10.1",
@@ -53,10 +51,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~10.9.2",
     "tslint": "~6.1.3",
-    "typescript": "~5.9.3"
-  },
-  "engines": {
-    "node": "13.5.0",
-    "npm": "6.13.4"
+    "typescript": "5.8"
   }
 }
