--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^20.0.0",
-    "@angular/animations": "^19.2.16",
-    "@angular/common": "^19.2.16",
-    "@angular/compiler": "^19.2.16",
-    "@angular/core": "^19.2.16",
-    "@angular/forms": "^19.2.16",
-    "@angular/platform-browser": "^19.2.16",
-    "@angular/platform-browser-dynamic": "^19.2.16",
-    "@angular/router": "^19.2.16",
+    "@angular/animations": "^20.3.14",
+    "@angular/common": "^20.3.14",
+    "@angular/compiler": "^20.3.14",
+    "@angular/core": "^20.3.14",
+    "@angular/forms": "^20.3.14",
+    "@angular/platform-browser": "^20.3.14",
+    "@angular/platform-browser-dynamic": "^20.3.14",
+    "@angular/router": "^20.3.14",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "express": "^5.1.0",
@@ -32,10 +32,10 @@
     "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.19",
-    "@angular/cli": "^19.2.19",
-    "@angular/compiler-cli": "^19.2.16",
-    "@angular/language-service": "^19.2.16",
+    "@angular/build": "^20.3.12",
+    "@angular/cli": "^20.3.12",
+    "@angular/compiler-cli": "^20.3.14",
+    "@angular/language-service": "^20.3.14",
     "@types/jasmine": "~5.1.13",
     "@types/jasminewd2": "~2.0.13",
     "@types/node": "~24.10.1",
