--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "private": true,
   "dependencies": {
     "@angular-slider/ngx-slider": "^21.0.0",
-    "@angular/animations": "^21.0.6",
-    "@angular/common": "^21.0.6",
-    "@angular/compiler": "^21.0.6",
-    "@angular/core": "^21.0.6",
-    "@angular/forms": "^21.0.6",
-    "@angular/platform-browser": "^21.0.6",
-    "@angular/platform-browser-dynamic": "^21.0.6",
-    "@angular/router": "^21.0.6",
+    "@angular/animations": "^21.0.8",
+    "@angular/common": "^21.0.8",
+    "@angular/compiler": "^21.0.8",
+    "@angular/core": "^21.0.8",
+    "@angular/forms": "^21.0.8",
+    "@angular/platform-browser": "^21.0.8",
+    "@angular/platform-browser-dynamic": "^21.0.8",
+    "@angular/router": "^21.0.8",
     "@fortawesome/fontawesome-free": "^7.1.0",
     "bootstrap": "^5.3.8",
     "express": "^5.2.1",
@@ -32,13 +32,13 @@
     "zone.js": "~0.16.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.6",
-    "@angular/language-service": "^21.0.6",
-    "@types/jasmine": "~5.1.13",
+    "@angular/build": "^21.0.5",
+    "@angular/cli": "^21.0.5",
+    "@angular/compiler-cli": "^21.0.8",
+    "@angular/language-service": "^21.0.8",
+    "@types/jasmine": "~5.1.14",
     "@types/jasminewd2": "~2.0.13",
-    "@types/node": "~25.0.3",
+    "@types/node": "~25.0.6",
     "codelyzer": "^6.0.2",
     "enhanced-resolve": "^5.18.4",
     "jasmine-core": "~5.13.0",
@@ -48,6 +48,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.3",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
+    "prettier": "^3.7.4",
     "protractor": "~7.0.0",
     "ts-node": "~10.9.2",
     "tslint": "~6.1.3",
