--- a/package.json
+++ b/package.json
@@ -37,21 +37,20 @@
     "@angular/compiler-cli": "^21.0.8",
     "@angular/language-service": "^21.0.8",
     "@types/jasmine": "~5.1.14",
-    "@types/jasminewd2": "~2.0.13",
     "@types/node": "~25.0.6",
-    "codelyzer": "^6.0.2",
+    "angular-eslint": "21.1.0",
     "enhanced-resolve": "^5.18.4",
+    "eslint": "^9.39.1",
     "jasmine-core": "~5.13.0",
     "jasmine-spec-reporter": "~7.0.0",
     "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
+    "karma-coverage": "^2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
     "prettier": "^3.7.4",
-    "protractor": "~7.0.0",
     "ts-node": "~10.9.2",
-    "tslint": "~6.1.3",
-    "typescript": "5.9.3"
+    "typescript": "5.9.3",
+    "typescript-eslint": "8.47.0"
   }
 }
